# kelly-ext

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: 01_drk_demo.ipynb  02_coverage_verification.ipynb  03_simulation_study.ipynb  04_sensitivity_analysis.ipynb
paper/: kelly_research_outline.md
src/kelly_robust/: __init__.py
src/kelly_robust/backtest/: __init__.py  performance.py  statistical_tests.py  transaction_costs.py  walk_forward.py
src/kelly_robust/calibration/: __init__.py  bayesian.py  bootstrap.py  conformal.py
src/kelly_robust/core/: __init__.py  kelly.py
src/kelly_robust/data/: __init__.py  download.py  preprocessing.py
src/kelly_robust/optimization/: __init__.py  constraints.py  multi_asset.py  single_asset.py
src/kelly_robust/simulation/: __init__.py  monte_carlo.py  return_models.py
tests/: test_kelly.py
